# AoC

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
2021/01/: aoc202101.py  test_aoc202101.py
2021/02/: aoc202102.py  test_aoc202102.py
2021/03/: aoc202103.py  test_aoc202103.py
2021/07/: README.md
2021/08/: README.md
2021/09/: README.md
2023/: README.md
2023/01/: aoc202301.py
2023/02/: aoc202302.py
2023/03/: aoc202303.py
