[tool.poetry]
name = "aoc"
version = "0.1.0"
description = "Advent of Code"
authors = ["Sven Axelsson <himself@svenax.net>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
advent-of-code-data = "^1.1.1"
colorama = "^0.4.4"
numpy = "^1.21.4"
pre-commit = "^2.16.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
ufmt = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
