[tool.poetry]
name = "aoc"
version = "0.2.0"
description = "Advent of Code"
authors = ["Sven Axelsson <himself@svenax.net>"]

[tool.poetry.dependencies]
python = "3.11.6"
advent-of-code-data = "^2.0.1"
numpy = "^1.26.2"
regex = "^2023.10.3"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
